[add] NarrowButton disabled props 추가

--- a/stories/Button/NarrowButton.stories.mdx
+++ b/stories/Button/NarrowButton.stories.mdx
@@ -172,3 +172,19 @@ export const Default = (args, { argTypes }) => ({
         }}
     </Story>
 </Canvas>
+
+### Disabled
+<Canvas>
+    <Story name="Disabled" height="100px">
+        {{
+            template: `
+            <div>
+                <NarrowButton color="gray400" disabled>
+                    Disabled
+                </NarrowButton>
+            </div>
+        `,
+            components: { NarrowButton },
+        }}
+    </Story>
+</Canvas>
