--- a/stories/Icon/Icon.stories.mdx
+++ b/stories/Icon/Icon.stories.mdx
@@ -131,6 +131,7 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper name=IconRevertMediumLine></IconWrapper>
                             <IconWrapper name=IconDownloadMediumLine></IconWrapper>
                             <IconWrapper name=IconExportMediumLine></IconWrapper>
+                            <IconWrapper name=IconClockMediumFill></IconWrapper>
                         </div>
                     </div>
                     <!--large-->
