[fix] Checkbox label 두줄 대응

--- a/stories/DataEntry/Checkbox.stories.mdx
+++ b/stories/DataEntry/Checkbox.stories.mdx
@@ -67,8 +67,8 @@ export const Default = (args, { argTypes }) => ({
                     </div>
                     <div class="mt-20">
                         <h3>Size</h3>
-                        <Checkbox size="medium">Medium Size</Checkbox>
-                        <Checkbox size="small">Small Size</Checkbox>
+                        <Checkbox size="medium" class="mb-4">Medium<br />Size</Checkbox>
+                        <Checkbox size="small">Small<br/>Size</Checkbox>
                     </div>
                 </div>
             `,
