[add] swiper slidesPerView auto 허용

--- a/stories/DataDisplay/Swiper/Swiper.stories.mdx
+++ b/stories/DataDisplay/Swiper/Swiper.stories.mdx
@@ -71,7 +71,7 @@ import SwiperItemExample from "./SwiperItemExample";
         slidesPerView: {
             description: "한번에 보여줄 슬라이드 개수",
             control: {
-                type: "number",
+                type: "text",
             },
         },
     }}
