[add] Checkbox size (small, xsmall)

--- a/stories/DataEntry/Checkbox.stories.mdx
+++ b/stories/DataEntry/Checkbox.stories.mdx
@@ -68,7 +68,8 @@ export const Default = (args, { argTypes }) => ({
                     <div class="mt-20">
                         <h3>Size</h3>
                         <Checkbox size="medium" class="mb-4">Medium<br />Size</Checkbox>
-                        <Checkbox size="small">Small<br/>Size</Checkbox>
+                        <Checkbox size="small" class="mb-4">Small<br/>Size</Checkbox>
+                        <Checkbox size="xsmall">Xsmall<br/>Size</Checkbox>
                     </div>
                 </div>
             `,
