--- a/stories/Card/Card.stories.mdx
+++ b/stories/Card/Card.stories.mdx
@@ -119,7 +119,11 @@ export const Default = (args, { argTypes }) => ({
                             <EduCard :background-image="exampleBackgroundImage" category="category" title="title" caption-left="captionLeft" caption-right="captionRight"/>
                         </StyleCol>
                         <StyleCol :col-lg="4">
-                            <EduCard :background-image="exampleBackgroundImage" category="category" title="title" caption-left="captionLeft" caption-right="captionRight"/>
+                            <EduCard :background-image="exampleBackgroundImage"
+                                      category="category"
+                                      title="대기업 현직자와 알기 쉽게 이해하는 생산기술 생산관리의 핵심알아보고 보고서 작성과 직무 체험하기"
+                                      caption-left="captionLeft"
+                                      caption-right="captionRight"/>
                         </StyleCol>
                         <StyleCol :col-lg="4">
                             <EduCard :background-image="exampleBackgroundImage" category="category" title="title" caption-left="captionLeft" caption-right="captionRight"/>
