[add] EduCard style 추가 (#387)
* [add] EduCard style 추가

* [add] EduCard 문구 넘칠 수 있는 경우 보여주기

* [add] 패드백 반영

* [change] indent

Co-authored-by: seongsil <yooo1201@naver.com>

--- a/stories/Card/Card.stories.mdx
+++ b/stories/Card/Card.stories.mdx
@@ -78,13 +78,31 @@ export const Default = (args, { argTypes }) => ({
         <Grid>
             <Row>
                 <StyleCol :col-lg="4">
-                    <EduCard :background-image="backgroundImage" :category="category" :title="title" :caption-left="captionLeft" :caption-right="captionRight"/>
+                    <EduCard
+                        :background-image="backgroundImage"
+                        :category="category"
+                        :title="title"
+                        :caption-left="captionLeft"
+                        :caption-right="captionRight"
+                    />
                 </StyleCol>
                 <StyleCol :col-lg="4">
-                    <EduCard :background-image="backgroundImage" :category="category" :title="title" :caption-left="captionLeft" :caption-right="captionRight"/>
+                    <EduCard
+                        :background-image="backgroundImage"
+                        :category="category"
+                        :title="title"
+                        :caption-left="captionLeft"
+                        :caption-right="captionRight"
+                    />
                 </StyleCol>
                 <StyleCol :col-lg="4">
-                    <EduCard :background-image="backgroundImage" :category="category" :title="title" :caption-left="captionLeft" :caption-right="captionRight"/>
+                    <EduCard
+                        :background-image="backgroundImage"
+                        :category="category"
+                        :title="title"
+                        :caption-left="captionLeft"
+                        :caption-right="captionRight"
+                    />
                 </StyleCol>
             </Row>
         </Grid>
@@ -116,13 +134,31 @@ export const Default = (args, { argTypes }) => ({
                 <Grid>
                     <Row>
                         <StyleCol :col-lg="4">
-                            <EduCard :background-image="exampleBackgroundImage" category="category" title="title" caption-left="captionLeft" caption-right="captionRight"/>
+                            <EduCard
+                                :background-image="exampleBackgroundImage"
+                                category="category"
+                                title="title"
+                                caption-left="captionLeft"
+                                caption-right="captionRight"
+                            />
                         </StyleCol>
                         <StyleCol :col-lg="4">
-                            <EduCard :background-image="exampleBackgroundImage" category="category" title="title" caption-left="captionLeft" caption-right="captionRight"/>
+                            <EduCard
+                                :background-image="exampleBackgroundImage"
+                                category="category"
+                                title="대기업 현직자와 알기 쉽게 이해하는 생산기술 생산관리의 핵심알아보고 보고서 작성과 직무 체험하기"
+                                caption-left="captionLeft"
+                                caption-right="captionRight"
+                            />
                         </StyleCol>
                         <StyleCol :col-lg="4">
-                            <EduCard :background-image="exampleBackgroundImage" category="category" title="title" caption-left="captionLeft" caption-right="captionRight"/>
+                            <EduCard
+                                :background-image="exampleBackgroundImage"
+                                category="category"
+                                title="title"
+                                caption-left="captionLeft"
+                                caption-right="captionRight"
+                            />
                         </StyleCol>
                     </Row>
                 </Grid>
