[add] 아이콘 추가 (icon-support-medium-line.svg)

--- a/stories/Icon/Icon.stories.mdx
+++ b/stories/Icon/Icon.stories.mdx
@@ -132,6 +132,7 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper name=IconDownloadMediumLine></IconWrapper>
                             <IconWrapper name=IconExportMediumLine></IconWrapper>
                             <IconWrapper name=IconClockMediumFill></IconWrapper>
+                            <IconWrapper name=IconSupportMediumLine></IconWrapper>
                         </div>
                     </div>
                     <!--large-->
