[change] star xlarge add

--- a/stories/Icon/Icon.stories.mdx
+++ b/stories/Icon/Icon.stories.mdx
@@ -177,6 +177,7 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper name=IconMegaphoneXLargeLine></IconWrapper>
                             <IconWrapper name=IconCheckXLargeFill></IconWrapper>
                             <IconWrapper name=IconUnCheckedXLargeFill></IconWrapper>
+                            <IconWrapper name=IconStarXLargeFill></IconWrapper>
                         </div>
                     </div>
                     <!--2x-large-->
