--- a/stories/Icon/Icon.stories.mdx
+++ b/stories/Icon/Icon.stories.mdx
@@ -79,6 +79,7 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper name="IconSettingSmallFill"></IconWrapper>
                             <IconWrapper name="IconQuestionMarkSmallFill"></IconWrapper>
                             <IconWrapper name="IconFileSmallLine"></IconWrapper>
+                            <IconWrapper name="IconStarSmallFill" color="gray400"></IconWrapper>
                         </div>
                     </div>
                     <!--medium-->
@@ -121,6 +122,7 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper name=IconExportMediumLine></IconWrapper>
                             <IconWrapper name=IconClockMediumFill></IconWrapper>
                             <IconWrapper name=IconSupportMediumLine></IconWrapper>
+                            <IconWrapper name=IconStarMediumFill color="gray400"></IconWrapper>
                         </div>
                     </div>
                     <!--large-->
@@ -175,6 +177,7 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper name=IconMegaphoneXLargeLine></IconWrapper>
                             <IconWrapper name=IconCheckXLargeFill></IconWrapper>
                             <IconWrapper name=IconUnCheckedXLargeFill></IconWrapper>
+                            <IconWrapper name=IconStarXLargeFill></IconWrapper>
                         </div>
                     </div>
                     <!--2x-large-->
@@ -182,6 +185,13 @@ export const Default = (args, { argTypes }) => ({
                         <Typography type="body1" style="margin-bottom: 10px">2XLarge</Typography>
                         <div style="display: flex; flex-wrap: wrap;">
                             <IconWrapper name=IconProfile2XLargeFill></IconWrapper>
+                        </div>
+                    </div>
+                    <!--4x-large-->
+                    <div>
+                        <Typography type="body1" style="margin-bottom: 10px">4XLarge</Typography>
+                        <div style="display: flex; flex-wrap: wrap;">
+                            <IconWrapper name=IconStar4XLargeFill color="gray400"></IconWrapper>
                         </div>
                     </div>
                 </div>
