--- a/stories/Card/Card.stories.mdx
+++ b/stories/Card/Card.stories.mdx
@@ -32,18 +32,6 @@ import StyleCol from "@/src/Components/Layout/StyleCol";
                 type: "text",
             },
         },
-        title: {
-            description: "캠프 제목<br/>`String`",
-            defaultValue: "title",
-            table: {
-                type: {
-                    summary: null,
-                },
-            },
-            control: {
-                type: "text",
-            },
-        },
         captionLeft: {
             description: "좌측 캡션<br/>`String`",
             defaultValue: "captionLeft",
@@ -81,28 +69,31 @@ export const Default = (args, { argTypes }) => ({
                     <EduCard
                         :background-image="backgroundImage"
                         :category="category"
-                        :title="title"
                         :caption-left="captionLeft"
                         :caption-right="captionRight"
-                    />
+                    >
+                       <template v-slot:title>Title</template>
+                    </EduCard>
                 </StyleCol>
                 <StyleCol :col-lg="4">
                     <EduCard
                         :background-image="backgroundImage"
                         :category="category"
-                        :title="title"
                         :caption-left="captionLeft"
                         :caption-right="captionRight"
-                    />
+                    >
+                       <template v-slot:title>Title</template>
+                    </EduCard>
                 </StyleCol>
                 <StyleCol :col-lg="4">
                     <EduCard
                         :background-image="backgroundImage"
                         :category="category"
-                        :title="title"
                         :caption-left="captionLeft"
                         :caption-right="captionRight"
-                    />
+                    >
+                       <template v-slot:title>Title</template>
+                    </EduCard>
                 </StyleCol>
             </Row>
         </Grid>
@@ -137,10 +128,11 @@ export const Default = (args, { argTypes }) => ({
                             <EduCard
                                 :background-image="exampleBackgroundImage"
                                 category="category"
-                                title="title"
                                 caption-left="captionLeft"
                                 caption-right="captionRight"
-                            />
+                            >
+                               <template v-slot:title>Title</template>
+                            </EduCard>
                         </StyleCol>
                         <StyleCol :col-lg="4">
                             <EduCard
@@ -149,7 +141,9 @@ export const Default = (args, { argTypes }) => ({
                                 title="대기업 현직자와 알기 쉽게 이해하는 생산기술 생산관리의 핵심알아보고 보고서 작성과 직무 체험하기"
                                 caption-left="captionLeft"
                                 caption-right="captionRight"
-                            />
+                            >
+                               <template v-slot:title>Title</template>
+                            </EduCard>
                         </StyleCol>
                         <StyleCol :col-lg="4">
                             <EduCard
@@ -158,7 +152,9 @@ export const Default = (args, { argTypes }) => ({
                                 title="title"
                                 caption-left="captionLeft"
                                 caption-right="captionRight"
-                            />
+                            >
+                               <template v-slot:title>Title</template>
+                            </EduCard>
                         </StyleCol>
                     </Row>
                 </Grid>
