[fix] LinkButton to prop defaultValue 변경 (javascript:void(0);)
Uncaught SyntaxError: Unexpected token ')' 오류 수정

--- a/stories/Button/LinkButton.stories.mdx
+++ b/stories/Button/LinkButton.stories.mdx
@@ -20,7 +20,7 @@ import LinkButton, { linkButtonColors, linkButtonTargets } from "@/src/Component
         },
         to: {
             description: "이동할 url",
-            defaultValue: "javascript:void();",
+            defaultValue: "javascript:void(0);",
             control: {
                 type: "text",
             },
