[fix] 모듈 불러오는 방법 수정

--- a/stories/DataDisplay/EmptyBox.stories.mdx
+++ b/stories/DataDisplay/EmptyBox.stories.mdx
@@ -1,7 +1,7 @@
 import { ArgsTable, Meta, Story, Canvas } from "@storybook/addon-docs/blocks";
-import NewGrid from "../../src/Components/Layout/NewGrid";
-import NewRow from "../../src/Components/Layout/NewRow";
-import NewCol from "../../src/Components/Layout/NewCol";
+import NewGrid from "@/src/Components/Layout/NewGrid";
+import NewRow from "@/src/Components/Layout/NewRow";
+import NewCol from "@/src/Components/Layout/NewCol";
 import EmptyBox, { Types } from "@/src/Components/DataDisplay/EmptyBox";
 import Typography from "@/src/Elements/Core/Typography/Typography";
 
